// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render Tab inside a component correctly 1`] = `
<div class="van-tabs van-tabs--underline">
  <div class="van-tabs__wrap">
    <div
      role="tablist"
      class="van-tabs__nav van-tabs__nav--underline"
      aria-orientation="horizontal"
    >
      <div
        id="van-tabs-0"
        role="tab"
        class="van-tab van-tab--underline"
        tabindex="-1"
        aria-selected="false"
        aria-controls="van-tab"
        data-allow-mismatch="attribute"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          1
        </span>
      </div>
      <div
        id="van-tabs-1"
        role="tab"
        class="van-tab van-tab--underline van-tab--active"
        tabindex="0"
        aria-selected="true"
        aria-controls="van-tab"
        data-allow-mismatch="attribute"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          2
        </span>
      </div>
      <div
        id="van-tabs-2"
        role="tab"
        class="van-tab van-tab--underline"
        tabindex="-1"
        aria-selected="false"
        aria-controls="van-tab"
        data-allow-mismatch="attribute"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          3
        </span>
      </div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div
      id="van-tab"
      role="tabpanel"
      class="van-tab__panel"
      tabindex="-1"
      aria-labelledby="van-tabs-0"
      data-allow-mismatch="attribute"
      style="display: none;"
    >
    </div>
    <div
      id="van-tab"
      role="tabpanel"
      class="van-tab__panel"
      tabindex="0"
      aria-labelledby="van-tabs-1"
      data-allow-mismatch="attribute"
      style
    >
      2
    </div>
    <div
      id="van-tab"
      role="tabpanel"
      class="van-tab__panel"
      tabindex="-1"
      aria-labelledby="van-tabs-2"
      data-allow-mismatch="attribute"
      style="display: none;"
    >
    </div>
  </div>
</div>
`;

exports[`should render correctly after inserting a tab 1`] = `
<div class="van-tabs van-tabs--underline">
  <div class="van-tabs__wrap">
    <div
      role="tablist"
      class="van-tabs__nav van-tabs__nav--underline"
      aria-orientation="horizontal"
    >
      <div
        id="van-tabs-0"
        role="tab"
        class="van-tab van-tab--underline"
        tabindex="-1"
        aria-selected="false"
        aria-controls="van-tab"
        data-allow-mismatch="attribute"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          1
        </span>
      </div>
      <div
        id="van-tabs-1"
        role="tab"
        class="van-tab van-tab--underline van-tab--active"
        tabindex="0"
        aria-selected="true"
        aria-controls="van-tab"
        data-allow-mismatch="attribute"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          2
        </span>
      </div>
      <div
        id="van-tabs-2"
        role="tab"
        class="van-tab van-tab--underline"
        tabindex="-1"
        aria-selected="false"
        aria-controls="van-tab"
        data-allow-mismatch="attribute"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          3
        </span>
      </div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div
      id="van-tab"
      role="tabpanel"
      class="van-tab__panel"
      tabindex="-1"
      aria-labelledby="van-tabs-0"
      data-allow-mismatch="attribute"
      style="display: none;"
    >
    </div>
    <div>
      <div
        id="van-tab"
        role="tabpanel"
        class="van-tab__panel"
        tabindex="0"
        aria-labelledby="van-tabs-1"
        data-allow-mismatch="attribute"
      >
        2
      </div>
    </div>
    <div
      id="van-tab"
      role="tabpanel"
      class="van-tab__panel"
      tabindex="-1"
      aria-labelledby="van-tabs-2"
      data-allow-mismatch="attribute"
      style="display: none;"
    >
      3
    </div>
  </div>
</div>
`;

exports[`should render correctly after inserting a tab from an array 1`] = `
<div class="van-tabs van-tabs--underline">
  <div class="van-tabs__wrap">
    <div
      role="tablist"
      class="van-tabs__nav van-tabs__nav--underline"
      aria-orientation="horizontal"
    >
      <div
        id="van-tabs-0"
        role="tab"
        class="van-tab van-tab--underline"
        tabindex="-1"
        aria-selected="false"
        aria-controls="van-tab"
        data-allow-mismatch="attribute"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          1
        </span>
      </div>
      <div
        id="van-tabs-1"
        role="tab"
        class="van-tab van-tab--underline van-tab--active"
        tabindex="0"
        aria-selected="true"
        aria-controls="van-tab"
        data-allow-mismatch="attribute"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          2
        </span>
      </div>
      <div
        id="van-tabs-2"
        role="tab"
        class="van-tab van-tab--underline"
        tabindex="-1"
        aria-selected="false"
        aria-controls="van-tab"
        data-allow-mismatch="attribute"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          3
        </span>
      </div>
    </div>
  </div>
  <div class="van-tabs__content">
  </div>
</div>
`;

exports[`should render correctly after inserting a tab with name 1`] = `
<div class="van-tabs van-tabs--underline">
  <div class="van-tabs__wrap">
    <div
      role="tablist"
      class="van-tabs__nav van-tabs__nav--underline"
      aria-orientation="horizontal"
    >
      <div
        id="van-tabs-0"
        role="tab"
        class="van-tab van-tab--underline"
        tabindex="-1"
        aria-selected="false"
        aria-controls="van-tab"
        data-allow-mismatch="attribute"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          bar
        </span>
      </div>
      <div
        id="van-tabs-1"
        role="tab"
        class="van-tab van-tab--underline van-tab--active"
        tabindex="0"
        aria-selected="true"
        aria-controls="van-tab"
        data-allow-mismatch="attribute"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          foo
        </span>
      </div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div
      id="van-tab"
      role="tabpanel"
      class="van-tab__panel"
      tabindex="-1"
      aria-labelledby="van-tabs-0"
      data-allow-mismatch="attribute"
      style="display: none;"
    >
      bar
    </div>
    <div
      id="van-tab"
      role="tabpanel"
      class="van-tab__panel"
      tabindex="0"
      aria-labelledby="van-tabs-1"
      data-allow-mismatch="attribute"
      style
    >
      foo
    </div>
  </div>
</div>
`;

exports[`should render nav-bottom slot correctly 1`] = `
<div class="van-tabs van-tabs--underline">
  <div class="van-tabs__wrap">
    <div
      role="tablist"
      class="van-tabs__nav van-tabs__nav--underline"
      aria-orientation="horizontal"
    >
    </div>
  </div>
  Nav Bottom
  <div class="van-tabs__content">
  </div>
</div>
`;
